Fri Aug 24 16:03:45 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_scroll_to_cell): Add
	"use_align" to give people the option to just make a cell visible.

	* gtk/gtktreeview.c (gtk_tree_view_scroll_to_point): fix bug where
	we were scrolling past the end of the tree.

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_pack_start):
	rename gtk_tree_view_column_pack_start_cell_renderer to
	gtk_tree_view_column_pack_start.  Same for pack_end, and clear.

Fri Aug 24 12:02:08 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextbuffer.c (gtk_text_buffer_new): Remove
	a stray g_object_ref() left over from gtk_object_ref/sink.
	(Pointed out by Josh Pritikin.)

Thu Aug 23 19:33:54 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcontainer.[ch]: Rename gtk_container_children()
	to gtk_container_get_children. Added deprecated compatibility
	macro. (Suggested by Vitaly Tishkov, #59051)

	* gtk/gtktoolbar.c gtkdialog.c: Fix gtk_container_children()
	calls.

Thu Aug 23 19:10:01 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenubar.h (gtk_menu_bar_insert): Deprecate 
	gtk_menu_bar_append/prepend/insert, forgot to do this
	when we deprecated gtk_menu_append/prepend/insert.

	* gtk/gtkmenu.h (gtk_menu_insert): Add casts to deprecated
	compat macros.

	* gtk/gtkmenu.c: Fix problem with static gtk_menu_insert() being
	renamed by compat macro.

	* gtk/gtkfontsel.h: Deprecated gtk_font_selection_get_font(),
	gtk_font_selection_dialog_get_font(). (Suggested by
	Vitaly Tishkov, #59383)

Thu Aug 23 18:23:31 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktexttag.c (gtk_text_tag_table_get_size): 
	Rename from gtk_text_tag_table_size(). (#59366)

Thu Aug 23 20:01:41 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreemodelsort.[ch], gtk/gtktreesortable.[ch],
	gtk/gtktreestore.[ch], gtk/gtktreeviewcolumn.[ch],
	gtk/gtkliststore.[ch]: use GtkSortType instead of GtkTreeSortOrder.
	(#59173).
